--- a/index.css
+++ b/index.css
@@ -7,10 +7,11 @@ body {
   vertical-align: top;
   width: 130%;
   text-align: right;
+  
 }
 
 .logo {
-  width: 23%;
+  width: 25%;
   padding: 1%;
   text-align: center;
   
@@ -27,20 +28,18 @@ body {
   align-content: center;
 }
 
+.resume {
+    align-content: center;
+}
+
 .content {
   width: 500px;
   margin: 0 auto;
 }
 
-.footer {
-  background-color: #373738;
-  padding: 25px;
-  width: 100%;
-}
-
 .ul {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: right;
   padding: 25px;
   color: white;
 }
@@ -53,9 +52,43 @@ body {
   color: white;
 }
 
+.myWork {
+    text-align: center;
+}
+
+.projectbutton {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
 .flexContainer {
     display: flex;
-    width: 33%;
-    margin: 0;
-    padding: 0;
+    flex-direction: row;
+    background-color: lightblue;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.mySkills {
+    text-align: center;
+}
+
+.workGrid {
+    display: grid;
+}
+
+
+.footer {
+    background-color: #373738;
+   position: bottom;
+   height: 200px;
+   margin-top: -100px;
+   clear: both;
+  }
+
+  @media screen and (max-width: 600) {
 }
