--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 body {
     font-family: 'Sofia Sans', sans-serif;
+    min-height: 100%;
+    padding: 0;
+    display: block;
+    height: 100px;
   }
   
 .inline-block {
@@ -83,12 +87,14 @@ body {
 
 
 .footer {
-    background-color: #373738;
-   position: bottom;
-   height: 200px;
-   margin-top: -100px;
-   clear: both;
+   background-color: #373738;
+   position:absolute; 
+   bottom:0; 
+   width:100%; 
+   height:100px; 
+   
   }
 
   @media screen and (max-width: 600) {
 }
+
