No idea what I doing

--- a/index.css
+++ b/index.css
@@ -1,9 +1,6 @@
 body {
     font-family: 'Sofia Sans', sans-serif;
-    min-height: 100%;
-    padding: 0;
-    display: block;
-    height: 100px;
+    
   }
   
 .inline-block {
@@ -48,18 +45,6 @@ body {
   color: white;
 }
 
-.p  {
-  color: white;
-}
-
-.a {
-  color: white;
-}
-
-.myWork {
-    text-align: center;
-}
-
 .projectbutton {
     padding-top: 25px;
     padding-bottom: 25px;
@@ -76,6 +61,17 @@ body {
     padding-left: 30px;
     padding-right: 30px;
 }
+
+#workLayout {
+  margin: 0px 5%;
+  display: grid;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+  "Picture1 Picture2"
+  
+}
+
 
 .mySkills {
     text-align: center;
