--- a/index.css
+++ b/index.css
@@ -52,20 +52,6 @@ body {
     padding-right: 25px;
 }
 
-.item1 {
-  grid-area: Picture1;
-}
-
-.item2 {
-  grid-area: Description;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-areas: "item1" "item2";
-
-}
-
 .flexContainer {
     display: flex;
     flex-direction: row;
@@ -79,21 +65,55 @@ body {
 #workLayout {
   margin: 0px 5%;
   display: grid;
-  grid-template-rows: 300px 300px 300px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-areas:
-  "Picture1 Picture2"
-  
+  "grid-container"
+  "grid-container2"
+  "projectbutton";
 }
 
 .footer {
    background-color: #373738;
-   position:absolute; 
-   bottom:0; 
    width:100%; 
    height:100px; 
    
   }
+
+.workGrid {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:  
+  "Picture1"
+  "Description";
+}
+
+.Picture1 {
+  grid-area:Picture1;
+}
+
+.Decription {
+  grid-area:Description;
+}
+
+.workGrid {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:  
+  "Picture1"
+  "Description";
+}
+
+.Picture2 {
+  grid-area:Picture1;
+}
+
+.Decription2 {
+  grid-area:Description;
+}
+
 
   @media screen and (max-width: 600) {
 }
