--- a/index.css
+++ b/index.css
@@ -45,6 +45,14 @@ body {
   color: white;
 }
 
+.p {
+  color: white;
+}
+
+.a {
+  color: white;
+}
+
 .projectbutton {
     padding-top: 25px;
     padding-bottom: 25px;
@@ -76,7 +84,7 @@ body {
 .footer {
    background-color: #373738;
    width:100%; 
-   height:100px; 
+   height:200px; 
    
   }
 
@@ -97,13 +105,13 @@ body {
   grid-area:Description;
 }
 
-.workGrid {
+.workGrid2 {
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:  
-  "Picture1"
-  "Description";
+  "Picture2"
+  "Description2";
 }
 
 .Picture2 {
@@ -116,5 +124,17 @@ body {
 
 
   @media screen and (max-width: 600) {
+    .myWork {
+      flex-direction: column;
+      width: 100%;
+      grid-template-columns: 1fr 1fr 1fr ;
+      grid-template-rows: 1fr 1fr 1fr ;
+      grid-template-areas:
+      "Picture1"
+      "Description"
+      "Picture1"
+      "Description2"
+      "Picture2";
+    }
 }
 
