--- a/index.css
+++ b/index.css
@@ -85,6 +85,13 @@ body {
    background-color: #373738;
    width:100%; 
    height:200px; 
+   display: grid;
+   grid-template-rows: 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-areas:  
+   "ul"
+   "p"
+   "a";
    
   }
 
